# perf-case-study

./: .gitignore  Cargo.toml  diff-lto.sh  diff.sh  list.md  readme.md  rust-perf.typ
.cargo/: config.toml
assets/bench-asm/: chain.s  zero_init.s
assets/bench-asm-inline/: chain_call.s  zero_init.s
assets/bench-asm-lto/: chain.s  zero.s
assets/bin-asm/: chain_move.s  chain_refm.s  zero_init.s  zero_uninit.s
assets/bin-asm-inline/: chain_move.s  chain_refm.s  zero_init.s  zero_uninit.s
assets/bin-asm-lto/: chain_move.s  chain_refm.s  zero_init.s  zero_uninit.s
assets/bin-rm-static/: uninit.s
assets/chain-ir/: many_chain.mir  many_chain_refm.mir
assets/ir/: many_chain.ll  many_chain_refm.ll  perf_case-4d1606e80e2ae2b1.ll  perf_case-4d1606e80e2ae2b1.mir  update_data-dd265cc984d859ac.ll
assets/ir-inline/: perf_case-c7991b3e889a396b.ll  perf_case-c7991b3e889a396b.mir  update_data-a73865ec3b061462.ll
assets/ir-lto/: chain_move-f3b6ac543d367251.ll  chain_refm-3f5e3fba40f66485.ll  zero_init-b60ca615e0d7ce44.ll  zero_uninit-09e99eb298218491.ll
crates/perf-case/: Cargo.toml
crates/perf-case/benches/: chain_call.rs  zero_init.rs
crates/perf-case/src/: black_box.rs  chain.rs  lib.rs  zero_init.rs
crates/update-data/: Cargo.toml
crates/update-data/src/: lib.rs
