[workspace]
resolver = "3"
members = ["crates/*"]
exclude = [".github", "sample/"]

[workspace.package]
authors = ["saying121 <saying121@outlook.com>"]
edition = "2024"
homepage = ""
repository = ""

[workspace.dependencies]
criterion = "0.6.0"
update-data = { path = "./crates/update-data" }

[profile.release]
# lto = true

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"
debug = true
